Added contact and documentation pages

--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
             <h1>Body Fat Predictor</h1>
         </div>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="/predict">Predict</a></li>
-            <li><a href="">Documentation</a></li>
-            <li><a href="">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="/predict">Predict</a></li>
+          <li><a href="document.html">Documentation</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <div class="container">
@@ -37,7 +37,7 @@
       </div>
     </div>
     <footer>
-        <p>&copy; 2023 Manthena Dileep sai. All rights reserved. | Contact: dileepsaimanthena4930@gmail.com | <a href="">Privacy Policy</a> | <a href="">Terms of Service</a> | Acknowledgments</p>
-    </footer>    
+      &copy; 2023 Manthena Dileep sai. All rights reserved.
+    </footer> 
 </body>
 </html>
